# Mobile-Robots-Project-

./: .gitignore  CMakeLists.txt  package.xml
docker/: Dockerfile  compose.yaml  setup_camera_ws.sh  useless.json  using.md
docker/configs/: dual_ekf_navsat_example.yaml  nav2_params.yaml  navigation_launch.py  navsat_transform.yaml  nmea_serial_driver.yaml  ps4.config.yaml  spatial-launch.py
docker/ros_ws/: frames.pdf.gv  frames_2025-05-17_11.45.33.gv  frames_2025-05-20_05.29.19.gv  frames_2025-05-20_05.49.33.gv  frames_2025-05-20_05.55.10.gv  frames_2025-05-20_06.01.49.gv  frames_2025-05-21_13.11.32.gv  frames_2025-05-22_12.59.11.gv  (+4 more)
docker/ros_ws/src/gps_nav_package/: package.xml  requirements.txt  setup.py
docker/ros_ws/src/gps_nav_package/gps_nav/: gps_waypoint_nav.py
docker/ros_ws/src/gps_nav_package/waypoints/: waypoints.csv
docker/ros_ws/src/p3at_description/: CMakeLists.txt
docker/ros_ws/src/p3at_description/config/: ekf.yaml  mapper_params_online_async.yaml
docker/ros_ws/src/p3at_description/launch/: display.launch.py  ekf_launch.py
docker/ros_ws/src/p3at_description/launch/install/: local_setup.sh  setup.sh
docker/ros_ws/src/p3at_description/rviz/: navigation.rviz
docker/ros_ws/src/p3at_description/urdf/: pioneer.urdf  pioneer.urdf.xacro  pioneer1.urdf
docker/ros_ws/src/p3at_description/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
docker/ros_ws/src/p3at_description/urdf/log/: latest_build
gazebo_ws-jazzy/: .bashconfig  .gitignore  Dockerfile  README.md  build.sh  compose.yaml  ros_entrypoint.sh
(+1244 files in other folders)
